main page responsivness

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="container">
     <!--  Top section  -->
     <div class="row">
-        <div class="col-xl-6 col-lg-6 col-md-8 col-12 top__section-left">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-12 top__section-left">
             <div class="logo__container">
                 <img class="logo__container__main" src="./assets/images/logo.png" alt="BeeBrand">
             </div>
@@ -77,19 +77,20 @@
                 </div>
             </div>
         </div>
-        <div class="col-xl-6 col-lg-6 col-md-4 col-12 top__section-right">
+        <div class="col-xl-6 col-lg-6 col-12 top__section-right">
             <div class="top__section-right__buttons">
                 <div class="hexagon__shadow">
                     <button class="hexagon__button hexagon__transparent top__section-right telegram"></button>
                 </div>
                 <div class="hexagon__shadow">
-                    <a href="./about-project.html" class="hexagon__button hexagon__transparent top__section-right start-project text-default">
+                    <a href="./about-project.html"
+                       class="hexagon__button hexagon__transparent top__section-right start-project text-default">
                         Start Project
                     </a>
                 </div>
             </div>
 
-            <div>
+            <div class="video__container">
                 <span class="top__video__close">X</span>
                 <div class="full__screen">
                     <div class="over-layer"></div>
@@ -122,9 +123,11 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
                         <div class="section__services__item-default">
-                            <img src="assets/images/icons/branding-service-icon.svg" class="service__hexagon__icon"
-                                 alt="Branding">
-                            <div class="service__hexagon"></div>
+                            <div class="service__default__content">
+                                <img src="assets/images/icons/branding-service-icon.svg" class="service__hexagon__icon"
+                                     alt="Branding">
+                                <div class="service__hexagon"></div>
+                            </div>
                             <span class="service__hexagon__title">Branding</span>
                         </div>
                         <div class="section__services__item-turned">
@@ -155,9 +158,11 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
                         <div class="section__services__item-default">
-                            <img src="assets/images/icons/web-service-icon.svg" class="service__hexagon__icon"
-                                 alt="Web">
-                            <div class="service__hexagon"></div>
+                            <div class="service__default__content">
+                                <img src="assets/images/icons/web-service-icon.svg" class="service__hexagon__icon"
+                                     alt="Web">
+                                <div class="service__hexagon"></div>
+                            </div>
                             <span class="service__hexagon__title">Web</span>
                         </div>
                         <div class="section__services__item-turned">
@@ -188,9 +193,12 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
                         <div class="section__services__item-default">
-                            <img src="assets/images/icons/typography-service-icon.svg" class="service__hexagon__icon"
-                                 alt="Typography">
-                            <div class="service__hexagon"></div>
+                            <div class="service__default__content">
+                                <img src="assets/images/icons/typography-service-icon.svg"
+                                     class="service__hexagon__icon"
+                                     alt="Typography">
+                                <div class="service__hexagon"></div>
+                            </div>
                             <span class="service__hexagon__title">Typography</span>
                         </div>
 
@@ -222,9 +230,11 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
                         <div class="section__services__item-default">
-                            <img src="assets/images/icons/photo-service-icon.svg" class="service__hexagon__icon"
-                                 alt="Photo/Video">
-                            <div class="service__hexagon"></div>
+                            <div class="service__default__content">
+                                <img src="assets/images/icons/photo-service-icon.svg" class="service__hexagon__icon"
+                                     alt="Photo/Video">
+                                <div class="service__hexagon"></div>
+                            </div>
                             <span class="service__hexagon__title">Photo/Video</span>
                         </div>
                         <div class="section__services__item-turned">
@@ -255,9 +265,11 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
                         <div class="section__services__item-default">
-                            <img src="assets/images/icons/smm-service-icon.svg" class="service__hexagon__icon"
-                                 alt="SMM">
-                            <div class="service__hexagon"></div>
+                            <div class="service__default__content">
+                                <img src="assets/images/icons/smm-service-icon.svg" class="service__hexagon__icon"
+                                     alt="SMM">
+                                <div class="service__hexagon"></div>
+                            </div>
                             <span class="service__hexagon__title">SMM</span>
                         </div>
                         <div class="section__services__item-turned">
@@ -288,9 +300,11 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
                         <div class="section__services__item-default">
-                            <img src="assets/images/icons/design-service-icon.svg" class="service__hexagon__icon"
-                                 alt="Design">
-                            <div class="service__hexagon"></div>
+                            <div class="service__default__content">
+                                <img src="assets/images/icons/design-service-icon.svg" class="service__hexagon__icon"
+                                     alt="Design">
+                                <div class="service__hexagon"></div>
+                            </div>
                             <span class="service__hexagon__title">Design</span>
                         </div>
                         <div class="section__services__item-turned">
@@ -340,7 +354,7 @@
                 <li><a href="#">Branding</a></li>
             </ul>
             <div class="row">
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-xl-3 col-md-4 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" width="415" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title">Lorem Ipsum</span>
@@ -349,7 +363,7 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-xl-3 col-md-4 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -358,7 +372,7 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-xl-3 col-md-4 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -367,7 +381,7 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-xl-3 col-md-4 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -376,16 +390,16 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-xl-3 col-md-4 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-xl-3 col-md-4 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-xl-3 col-md-4 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-xl-3 col-md-4 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
             </div>
@@ -565,7 +579,7 @@
         <div class="footer__block footer__logo">
             <img class="footer__logo__icon" src="./assets/images/icons/logo.svg" alt="Logo">
         </div>
-        <div class="footer__block">
+        <div class="footer__block footer__block__service">
             <p class="footer__block__title">Service</p>
             <ul class="footer__block__list footer__services">
                 <li class="footer__block__list__item"><a href="#">Photo/video</a></li>
@@ -618,7 +632,8 @@
                 <div class="cong__text">
                     <h2 class="cong__text__title text-default">CONGRATULATIONS</h2>
                     <img src="./assets/images/congrates.png" alt="" width="280" height="175">
-                    <p class="text-default">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                    <p class="text-default">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been
                         the industry's standard dummyLorem Ipsum is simply dummy text of the printing and typesetting
                         industry. Lorem Ipsum has been the industry's standard dummyLorem Ipsum is simply dummy text of
                         the printing and typesetting industry. </p>
