--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             </ul>
 
                             <div class="hexagon__shadow additional-action">
-                                <button class="hexagon__button">Open</button>
+                                <button class="hexagon__button hexagon__transparent">Open</button>
                             </div>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                             </ul>
 
                             <div class="hexagon__shadow additional-action">
-                                <button class="hexagon__button">Open</button>
+                                <button class="hexagon__button hexagon__transparent">Open</button>
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             </ul>
 
                             <div class="hexagon__shadow additional-action">
-                                <button class="hexagon__button">Open</button>
+                                <button class="hexagon__button hexagon__transparent">Open</button>
                             </div>
                         </div>
                     </div>
@@ -257,7 +257,7 @@
                             </ul>
 
                             <div class="hexagon__shadow additional-action">
-                                <button class="hexagon__button">Open</button>
+                                <button class="hexagon__button hexagon__transparent">Open</button>
                             </div>
                         </div>
                     </div>
@@ -292,7 +292,7 @@
                             </ul>
 
                             <div class="hexagon__shadow additional-action">
-                                <button class="hexagon__button">Open</button>
+                                <button class="hexagon__button hexagon__transparent">Open</button>
                             </div>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                             </ul>
 
                             <div class="hexagon__shadow additional-action">
-                                <button class="hexagon__button">Open</button>
+                                <button class="hexagon__button hexagon__transparent">Open</button>
                             </div>
                         </div>
                     </div>
@@ -540,6 +540,7 @@
             <img src="assets/images/icons/line.svg" class="section__title__line" alt="header">
         </div>
         <div class="col-xl-12 section__partners">
+            <button class="slick-prev"></button>
             <div class="hexagon__shadow prev">
                 <button class="hexagon__button hexagon__transparent slick-prev"></button>
             </div>
@@ -569,6 +570,7 @@
             <div class="hexagon__shadow next">
                 <button class="hexagon__button hexagon__transparent slick-next"></button>
             </div>
+            <button class="slick-next"></button>
         </div>
     </div>
 
