--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     <!--  Top section  -->
     <div class="row">
         <div class="col-12">
-            <ul class="section__portfolio__filter d-flex">
+            <ul class="section__portfolio__filter">
                 <li><a href="#">All</a></li>
                 <li><a href="#" class="active">Photo</a></li>
                 <li><a href="#">Video</a></li>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="row page__description">
-        <div class="col-xl-6 col-12 d-flex page__description__left">
+        <div class="col-xl-6 col-12 page__description__left">
             <div class="service__hexagon page__description__hexagon hx-0">
                 <span class="portfolio__hexagon__text">Product photo</span>
             </div>
